// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shop::disable-modal autostop modal: button loading 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained Button-loadingClass MuiButton-containedSizeLarge MuiButton-sizeLarge Button-sizeLarge MuiButton-disableElevation MuiButton-disabled MuiButtonBase-disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <div
      class="MobileUISpinner-root-1"
      data-testid="ui__spinner"
    >
      <div
        class="MobileUISpinner-spinner-3"
        style="width: 24px; height: 24px;"
      />
    </div>
  </span>
</button>
`;

exports[`shop::disable-modal autostop modal: loading 1`] = `
<DocumentFragment>
  <div
    class="LayoutModal-root"
    data-testid="ui__modal"
  >
    <div
      class="LayoutModal-wrap"
    >
      <div
        class="LayoutModal-content"
      >
        <div
          class="BaseIcon-root IconCrossIcon-root LayoutModal-close"
          data-testid="ui__modal-close"
        />
        <div
          class="HeaderModal-root"
        >
          <span
            class="HeaderModal-header"
          >
            <h1>
              Отключение ресторана
            </h1>
          </span>
        </div>
        <div
          class="BodyModal-root"
          style="height: 300px;"
        >
          <div
            class="LoadingIndicator-root"
          >
            <div
              class="LoadingIndicator-yellowSpinner"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="LayoutModal-backdrop"
    />
  </div>
</DocumentFragment>
`;

exports[`shop::disable-modal autostop modal: pending disable shop 1`] = `
Object {
  "all": Array [
    Object {
      "address": "Россия, Москва, Лесная улица, 5",
      "brand": Object {
        "businessType": "restaurant",
        "slug": "kofemaniya",
      },
      "currency": Object {
        "code": "RUB",
        "sign": "₽",
      },
      "disableDetails": null,
      "editingSettings": Object {
        "allowCancel": false,
        "allowClientExpenseChanges": false,
        "allowRestaurantExpenseChanges": false,
        "status": "disabled",
        "timeToApproveChanges": 0,
      },
      "feedback": Object {
        "cursor": 1,
        "predefined_comments": Array [],
        "report_status": "DONE",
        "sort": "date:desc",
        "total_count": 0,
        "values": Array [],
      },
      "feedbackSummary": null,
      "heroPhoto": "",
      "id": 305726,
      "info": null,
      "integrationType": "native",
      "isAvailable": true,
      "isSwitchingOnRequested": false,
      "menu": Object {
        "categories": Array [],
        "defaultCategories": Array [],
        "loading": false,
        "search": "",
        "selectedCategory": null,
        "timestampsMap": Object {},
      },
      "name": "Кофемания NEW",
      "rating": Object {
        "cancel_rating": Object {
          "calculated_at": "",
          "cancels": Array [],
          "delta": 0,
          "history": Array [],
          "rating": 0,
          "show_rating": false,
          "tips": Array [],
        },
        "final_rating": Object {
          "calculated_at": "",
          "delta": 0,
          "history": Array [],
          "historyLoaded": false,
          "shop_id": 0,
          "rating": 0,
          "show_rating": false,
        },
        "user_rating": Object {
          "calculated_at": "",
          "delta": 0,
          "feedbacks": Array [],
          "improve_rating": Object {
            "requirement": Object {
              "feedback": 0,
              "feedbacks_count": 0,
            },
            "target_rating": 0,
          },
          "rating": 0,
          "show_rating": false,
          "tips": Array [],
          "welcome_feedbacks": Array [
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
          ],
        },
      },
      "schedule": Object {
        "holiday": Array [],
        "regular": Array [],
        "similarHolidayShops": Array [],
        "similarRegularShops": Array [],
      },
      "showShippingTime": true,
      "slug": "kofemaniya_lesnaya_5",
      "status": Object {
        "isStatusChangePending": true,
      },
      "type": "native",
      "vatList": Array [],
    },
  ],
  "allDeliveryType": Array [
    "native",
  ],
  "allShopsId": Array [
    305726,
  ],
  "averageReceipts": null,
  "disabledRestaurants": Array [],
  "enabledRestaurants": Array [
    Object {
      "address": "Россия, Москва, Лесная улица, 5",
      "brand": Object {
        "businessType": "restaurant",
        "slug": "kofemaniya",
      },
      "currency": Object {
        "code": "RUB",
        "sign": "₽",
      },
      "disableDetails": null,
      "editingSettings": Object {
        "allowCancel": false,
        "allowClientExpenseChanges": false,
        "allowRestaurantExpenseChanges": false,
        "status": "disabled",
        "timeToApproveChanges": 0,
      },
      "feedback": Object {
        "cursor": 1,
        "predefined_comments": Array [],
        "report_status": "DONE",
        "sort": "date:desc",
        "total_count": 0,
        "values": Array [],
      },
      "feedbackSummary": null,
      "heroPhoto": "",
      "id": 305726,
      "info": null,
      "integrationType": "native",
      "isAvailable": true,
      "isSwitchingOnRequested": false,
      "menu": Object {
        "categories": Array [],
        "defaultCategories": Array [],
        "loading": false,
        "search": "",
        "selectedCategory": null,
        "timestampsMap": Object {},
      },
      "name": "Кофемания NEW",
      "rating": Object {
        "cancel_rating": Object {
          "calculated_at": "",
          "cancels": Array [],
          "delta": 0,
          "history": Array [],
          "rating": 0,
          "show_rating": false,
          "tips": Array [],
        },
        "final_rating": Object {
          "calculated_at": "",
          "delta": 0,
          "history": Array [],
          "historyLoaded": false,
          "shop_id": 0,
          "rating": 0,
          "show_rating": false,
        },
        "user_rating": Object {
          "calculated_at": "",
          "delta": 0,
          "feedbacks": Array [],
          "improve_rating": Object {
            "requirement": Object {
              "feedback": 0,
              "feedbacks_count": 0,
            },
            "target_rating": 0,
          },
          "rating": 0,
          "show_rating": false,
          "tips": Array [],
          "welcome_feedbacks": Array [
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
          ],
        },
      },
      "schedule": Object {
        "holiday": Array [],
        "regular": Array [],
        "similarHolidayShops": Array [],
        "similarRegularShops": Array [],
      },
      "showShippingTime": true,
      "slug": "kofemaniya_lesnaya_5",
      "status": Object {
        "isStatusChangePending": true,
      },
      "type": "native",
      "vatList": Array [],
    },
  ],
  "entities": Object {
    "305726": Object {
      "address": "Россия, Москва, Лесная улица, 5",
      "brand": Object {
        "businessType": "restaurant",
        "slug": "kofemaniya",
      },
      "currency": Object {
        "code": "RUB",
        "sign": "₽",
      },
      "disableDetails": null,
      "editingSettings": Object {
        "allowCancel": false,
        "allowClientExpenseChanges": false,
        "allowRestaurantExpenseChanges": false,
        "status": "disabled",
        "timeToApproveChanges": 0,
      },
      "feedback": Object {
        "cursor": 1,
        "predefined_comments": Array [],
        "report_status": "DONE",
        "sort": "date:desc",
        "total_count": 0,
        "values": Array [],
      },
      "feedbackSummary": null,
      "heroPhoto": "",
      "id": 305726,
      "info": null,
      "integrationType": "native",
      "isAvailable": true,
      "isSwitchingOnRequested": false,
      "menu": Object {
        "categories": Array [],
        "defaultCategories": Array [],
        "loading": false,
        "search": "",
        "selectedCategory": null,
        "timestampsMap": Object {},
      },
      "name": "Кофемания NEW",
      "rating": Object {
        "cancel_rating": Object {
          "calculated_at": "",
          "cancels": Array [],
          "delta": 0,
          "history": Array [],
          "rating": 0,
          "show_rating": false,
          "tips": Array [],
        },
        "final_rating": Object {
          "calculated_at": "",
          "delta": 0,
          "history": Array [],
          "historyLoaded": false,
          "shop_id": 0,
          "rating": 0,
          "show_rating": false,
        },
        "user_rating": Object {
          "calculated_at": "",
          "delta": 0,
          "feedbacks": Array [],
          "improve_rating": Object {
            "requirement": Object {
              "feedback": 0,
              "feedbacks_count": 0,
            },
            "target_rating": 0,
          },
          "rating": 0,
          "show_rating": false,
          "tips": Array [],
          "welcome_feedbacks": Array [
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
          ],
        },
      },
      "schedule": Object {
        "holiday": Array [],
        "regular": Array [],
        "similarHolidayShops": Array [],
        "similarRegularShops": Array [],
      },
      "showShippingTime": true,
      "slug": "kofemaniya_lesnaya_5",
      "status": Object {
        "isStatusChangePending": true,
      },
      "type": "native",
      "vatList": Array [],
    },
  },
  "filteredShops": Array [
    Object {
      "address": "Россия, Москва, Лесная улица, 5",
      "brand": Object {
        "businessType": "restaurant",
        "slug": "kofemaniya",
      },
      "currency": Object {
        "code": "RUB",
        "sign": "₽",
      },
      "disableDetails": null,
      "editingSettings": Object {
        "allowCancel": false,
        "allowClientExpenseChanges": false,
        "allowRestaurantExpenseChanges": false,
        "status": "disabled",
        "timeToApproveChanges": 0,
      },
      "feedback": Object {
        "cursor": 1,
        "predefined_comments": Array [],
        "report_status": "DONE",
        "sort": "date:desc",
        "total_count": 0,
        "values": Array [],
      },
      "feedbackSummary": null,
      "heroPhoto": "",
      "id": 305726,
      "info": null,
      "integrationType": "native",
      "isAvailable": true,
      "isSwitchingOnRequested": false,
      "menu": Object {
        "categories": Array [],
        "defaultCategories": Array [],
        "loading": false,
        "search": "",
        "selectedCategory": null,
        "timestampsMap": Object {},
      },
      "name": "Кофемания NEW",
      "rating": Object {
        "cancel_rating": Object {
          "calculated_at": "",
          "cancels": Array [],
          "delta": 0,
          "history": Array [],
          "rating": 0,
          "show_rating": false,
          "tips": Array [],
        },
        "final_rating": Object {
          "calculated_at": "",
          "delta": 0,
          "history": Array [],
          "historyLoaded": false,
          "shop_id": 0,
          "rating": 0,
          "show_rating": false,
        },
        "user_rating": Object {
          "calculated_at": "",
          "delta": 0,
          "feedbacks": Array [],
          "improve_rating": Object {
            "requirement": Object {
              "feedback": 0,
              "feedbacks_count": 0,
            },
            "target_rating": 0,
          },
          "rating": 0,
          "show_rating": false,
          "tips": Array [],
          "welcome_feedbacks": Array [
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
            Object {
              "feedback": 5,
            },
          ],
        },
      },
      "schedule": Object {
        "holiday": Array [],
        "regular": Array [],
        "similarHolidayShops": Array [],
        "similarRegularShops": Array [],
      },
      "showShippingTime": true,
      "slug": "kofemaniya_lesnaya_5",
      "status": Object {
        "isStatusChangePending": true,
      },
      "type": "native",
      "vatList": Array [],
    },
  ],
  "first": Object {
    "address": "Россия, Москва, Лесная улица, 5",
    "brand": Object {
      "businessType": "restaurant",
      "slug": "kofemaniya",
    },
    "currency": Object {
      "code": "RUB",
      "sign": "₽",
    },
    "disableDetails": null,
    "editingSettings": Object {
      "allowCancel": false,
      "allowClientExpenseChanges": false,
      "allowRestaurantExpenseChanges": false,
      "status": "disabled",
      "timeToApproveChanges": 0,
    },
    "feedback": Object {
      "cursor": 1,
      "predefined_comments": Array [],
      "report_status": "DONE",
      "sort": "date:desc",
      "total_count": 0,
      "values": Array [],
    },
    "feedbackSummary": null,
    "heroPhoto": "",
    "id": 305726,
    "info": null,
    "integrationType": "native",
    "isAvailable": true,
    "isSwitchingOnRequested": false,
    "menu": Object {
      "categories": Array [],
      "defaultCategories": Array [],
      "loading": false,
      "search": "",
      "selectedCategory": null,
      "timestampsMap": Object {},
    },
    "name": "Кофемания NEW",
    "rating": Object {
      "cancel_rating": Object {
        "calculated_at": "",
        "cancels": Array [],
        "delta": 0,
        "history": Array [],
        "rating": 0,
        "show_rating": false,
        "tips": Array [],
      },
      "final_rating": Object {
        "calculated_at": "",
        "delta": 0,
        "history": Array [],
        "historyLoaded": false,
        "shop_id": 0,
        "rating": 0,
        "show_rating": false,
      },
      "user_rating": Object {
        "calculated_at": "",
        "delta": 0,
        "feedbacks": Array [],
        "improve_rating": Object {
          "requirement": Object {
            "feedback": 0,
            "feedbacks_count": 0,
          },
          "target_rating": 0,
        },
        "rating": 0,
        "show_rating": false,
        "tips": Array [],
        "welcome_feedbacks": Array [
          Object {
            "feedback": 5,
          },
          Object {
            "feedback": 5,
          },
          Object {
            "feedback": 5,
          },
          Object {
            "feedback": 5,
          },
          Object {
            "feedback": 5,
          },
        ],
      },
    },
    "schedule": Object {
      "holiday": Array [],
      "regular": Array [],
      "similarHolidayShops": Array [],
      "similarRegularShops": Array [],
    },
    "showShippingTime": true,
    "slug": "kofemaniya_lesnaya_5",
    "status": Object {
      "isStatusChangePending": true,
    },
    "type": "native",
    "vatList": Array [],
  },
  "getShopById": [Function],
  "hasOnlyOneShop": true,
  "shopIds": Array [
    305726,
  ],
  "selectedRating": "desc",
  "selectedRestType": "all",
  "selfRegCompleteRestaurants": Array [],
  "selfRegPendingRestaurants": Array [],
  "size": 1,
  "status": 0,
}
`;

exports[`shop::disable-modal autostop modal: second chip selected 1`] = `
<div
  class="DisableReasonForm-groupContent"
  data-testid="shop__autostop-modal-chip-group"
>
  <div
    class="UIChip-root"
  >
    <input
      checked=""
      class="UIChip-input"
      id="problem-93"
      type="checkbox"
      value="93"
    />
    <label
      class="UIChip-label"
      for="problem-93"
    >
      Не успеваем
    </label>
  </div>
  <div
    class="UIChip-root UIChip-active"
  >
    <input
      class="UIChip-input"
      id="problem-92"
      type="checkbox"
      value="92"
    />
    <label
      class="UIChip-label"
      for="problem-92"
    >
      Мероприятие, ЧП
    </label>
  </div>
  <div
    class="UIChip-root"
  >
    <input
      class="UIChip-input"
      id="problem-91"
      type="checkbox"
      value="91"
    />
    <label
      class="UIChip-label"
      for="problem-91"
    >
      Другое
    </label>
  </div>
</div>
`;

exports[`shop::disable-modal autostop modal: show autostop disable reason form 1`] = `
<DocumentFragment>
  <div
    class="LayoutModal-root"
    data-testid="ui__modal"
  >
    <div
      class="LayoutModal-wrap"
    >
      <div
        class="LayoutModal-content"
      >
        <div
          class="BaseIcon-root IconCrossIcon-root LayoutModal-close"
          data-testid="ui__modal-close"
        />
        <div
          class="HeaderModal-root"
        >
          <span
            class="HeaderModal-header"
          >
            <h1>
              Отменить заказы и отключить ресторан
            </h1>
          </span>
        </div>
        <div
          class="BodyModal-root"
        >
          <div
            class="WarningPanel-warning"
          >
            <div
              class="WarningPanel-warningIcon"
            />
            Вас ждут заказы, которые придётся отменить. Чтобы ещё больше клиентов не столкнулось с отменами, ресторан будет временно отключён.
            <br />

            <br />
             При отмене заказы не оплачиваются и за них удерживается комиссия.
          </div>
          <span>
            Кофемания NEW - Россия, Москва, Лесная улица, 5
          </span>
          <br />
          <span
            class="DisableReasonForm-hint"
          >
            Доставка Яндекс.Еды
          </span>
          <div
            class="DisableReasonForm-group"
          >
            <div
              class="DisableReasonForm-groupTitle"
            >
              в чем причина
            </div>
            <div
              class="DisableReasonForm-groupContent"
              data-testid="shop__autostop-modal-chip-group"
            >
              <div
                class="UIChip-root UIChip-active"
              >
                <input
                  checked=""
                  class="UIChip-input"
                  id="problem-93"
                  type="checkbox"
                  value="93"
                />
                <label
                  class="UIChip-label"
                  for="problem-93"
                >
                  Не успеваем
                </label>
              </div>
              <div
                class="UIChip-root"
              >
                <input
                  class="UIChip-input"
                  id="problem-92"
                  type="checkbox"
                  value="92"
                />
                <label
                  class="UIChip-label"
                  for="problem-92"
                >
                  Мероприятие, ЧП
                </label>
              </div>
              <div
                class="UIChip-root"
              >
                <input
                  class="UIChip-input"
                  id="problem-91"
                  type="checkbox"
                  value="91"
                />
                <label
                  class="UIChip-label"
                  for="problem-91"
                >
                  Другое
                </label>
              </div>
            </div>
          </div>
          <div
            class="DisableReasonForm-group"
          >
            <div
              class="DisableReasonForm-groupTitle"
            >
              На сколько:
            </div>
            <div
              class="DisableReasonForm-groupContent"
            >
              <strong>
                9 минут
              </strong>
            </div>
          </div>
        </div>
        <div
          class="FooterModal-root"
        >
          <div
            class="DisableReasonForm-actions"
          >
            <button
              class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary Button-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Button-sizeLarge MuiButton-disableElevation"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Отменить и отключить
              </span>
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedSizeLarge MuiButton-sizeLarge Button-sizeLarge MuiButton-disableElevation"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Только отключить
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="LayoutModal-backdrop"
    />
  </div>
</DocumentFragment>
`;
